--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="col-lg-5 offset-lg-1 col-md-4 offset-md-2 col-sm-12 pt-5">
                 <h2 class=""><strong>Alain Surkol</strong></h2>
                 <h4 class="text-muted">experienced coach</h4>
-                <p>Today, I am Head of Sales Excellence at bpost. For 24 years I’ve been working for bpost, a company acting in constantly changing market conditions.
+                <p>For 24 years I’ve been working for bpost, a company acting in constantly changing market conditions. Today, I am Head of Sales Excellence.
                 </p>
                 <p>
                 That is why I was one of the driving forces behind an internal leadership program aimed at improving our corporate culture. I saw the impact this has on an organization. With b2b I want to bring this to as many people and their organizations as possible.</p>
@@ -111,9 +111,9 @@
 <!-- WHY B2B -->
               <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                   <p>
-                        How b2b can help:
-                        Do you want to change the mind-set of your team? Or do you wish to prepare your organization for change? Don’t look any further, b2b is your partner! 
+                        Do you want to change the mind-set of your team? Or do you wish to prepare your organization for change? Don’t look any further, <strong>b2b is your partner</strong>! 
                     </p>
+                    <h5 class="text-muted">How b2b can help</h5>
                     <p>
                        b2b (better2best) provides trainings, workshops and lectures inspiring your team, your company or your audience to do better every day so that they can become the best in the long run.
                     </p>
@@ -129,13 +129,14 @@
 <!-- HOW IT WORKS -->
               <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                     <p>
-                        We offer x modules devided into 3 themes (I, you and i, we). Modules can also be choosen a la carte. We will always make sure the combination makes an interesting story. This story is brought to you either as a training (including workshop on ‘how to deal with the learnings in practive’) or as a lecture/keynote.
+                        We offer 13 modules devided into 3 themes (the <strong>individual</strong>, the <strong>team</strong> and the <strong>organisation</strong>). Modules can also be choosen a la carte. We will always make sure the combination makes an interesting story. This story is brought to you either as a <strong>training</strong> (including workshop on ‘how to deal with the learnings in practive’) or as a <strong>lecture/keynote</strong>.
                     </p>
+                    <h5 class="text-muted">Easy to understand, ready to use</h5>
                     <p>
                         The concepts that are covered in each of the modules are easy to understand, practical and ready to use, whatever you position, whatever your sector. Moreover, the new insights are not only applicable at work but are also of use in your private life.
                     </p>
                     <p>
-                        You should plan 30’ min. to 90’ max. per module. Each of the modules can be extended with a workshop on “how to deal with the learnings in practice”. Add min. 15’ to max. 30’ per workshop.
+                        You should plan <strong>30’ to 90’ per module</strong>. Each of the modules can be extended with a workshop on “how to deal with the learnings in practice”. Add 15’ to 30’ per workshop.
                     </p>
               </div>
             </div>
@@ -227,12 +228,11 @@
                                 We discover the modules that focus on the interaction between two individuals. 
                             </h4>
                         </div>
-                        <div class="col-md-4">
-                            <p>
+                        
+                        <div class="col-md-7 text-dark">
+                           <p>
                                 During this journey we engage to interact and discover what type of behaviour is helpful. We explore our surroundings and are open to new encounters.
                             </p>
-                        </div>
-                        <div class="col-md-4">
                             <p>
                                 <span class="text-uppercase font-weight-bold">Curiosity</span> - How to adopt a curious attitude? Did you know that curiosity is the key to new innovative thinking and ideas?
                             </p>
@@ -252,7 +252,7 @@
                 <div role="tabpanel" class="tab-pane fade" id="marketing">
                     <div class="row">
                         <div class="col-md-10 offset-md-1">
-                            <h4>We discover the wide world and get acquainted with the modules that facilitate collaboration in a team and that can be applied in whatever organization, company or association. </h4>
+                            <h4>We discover the modules that facilitate collaboration in a team and that can be applied in whatever organization, company or association. </h4>
                         </div>
                     </div>
                     <div class="row pt-3">
